--- a/src/sections/Banner.html
+++ b/src/sections/Banner.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="card-container">
-    <Card angle="-10deg"/>
-    <Card angle="5deg" />
-    <Card angle="20deg" />
+    <BannerCard angle="-10deg"/>
+    <BannerCard angle="5deg" />
+    <BannerCard angle="20deg" />
   </div>
   <div class="header">
     <h1>Golden</h1>
@@ -14,9 +14,12 @@
 <style>
   .container {
     width: 100%;
+    max-width: 60rem;
     height: 35rem;
     display: flex;
     padding: 3rem;
+    margin: auto;
+    margin-bottom: 2rem;
     justify-content: space-between;
     align-items: center;
   }
@@ -34,7 +37,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 70vw;
+    width: 60vw;
     text-align: right;
   }
   h1 {
@@ -45,9 +48,15 @@
   h1.accented {
     color: var(--primary);
   }
+
+  @media(max-width: 60rem) {
+    h1 {
+      font-size: 5rem;
+    }
+  }
 </style>
 
 <script>
-  import Card from './Card.html'
+  import BannerCard from '../components/BannerCard.html'
 </script>
   
