add profile images, calendar embed

--- a/src/sections/AboutBlurb.html
+++ b/src/sections/AboutBlurb.html
@@ -1,10 +1,11 @@
 <section>
   <header>About Us</header>
   <p>
-    We're a new club at <a>Georgia Tech</a> all about making our own board
-    games! We're currently building our first ever game "Escape to Elysium."
-    Members of all interests are welcome. Between designing artwork, marketing,
-    or just coming up with crazy ideas, you'll definitely find your place :)
+    We're a new club at <a href="https://gatech.edu">Georgia Tech</a> all about
+    making our own board games! We're currently building our first ever game
+    "Escape to Elysium." Members of all interests are welcome. Between designing
+    artwork, marketing, or just coming up with crazy ideas, you'll definitely
+    find your place :)
   </p>
 </section>
 
