--- a/src/sections/Content.html
+++ b/src/sections/Content.html
@@ -1,7 +1,8 @@
-<div class="stripe" />
+<div class="stripe"></div>
 <Banner />
 <AboutBlurb />
-<ExecutiveBoarb />
+<ClubLeaders />
+<GetInvolved />
 
 <style>
   .stripe {
@@ -17,7 +18,7 @@
     top: 0;
     transform: rotate(20deg) translateZ(-2rem) translateY(-50%) scale(1.7);
     transform-origin: top right;
-    height: 300vh;
+    height: 400vh;
     width: 100%;
     background: var(--primary-bg-1);
     background-size: 100%;
@@ -28,5 +29,6 @@
 <script>
   import Banner from './Banner.html'
   import AboutBlurb from './AboutBlurb.html'
-  import ExecutiveBoarb from './ExecutiveBoarb.html'
+  import ClubLeaders from './ClubLeaders.html'
+  import GetInvolved from './GetInvolved.html'
 </script>
