subtle fixes to site content components

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<nav></nav>
+<NavBar />
 <main>
   <div class="backing">
     <Content />
@@ -31,4 +31,5 @@
 
 <script>
   import Content from './sections/Content.html'
+  import NavBar from './components/NavBar.html'
 </script>
