--- a/src/sections/Banner.html
+++ b/src/sections/Banner.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="{sectionId}">
   <div class="card-container">
     <BannerCard angle="-10deg"/>
     <BannerCard angle="5deg" />
@@ -58,5 +58,7 @@
 
 <script>
   import BannerCard from '../components/BannerCard.html'
+  
+  export let sectionId
 </script>
   
