--- a/src/sections/Content.html
+++ b/src/sections/Content.html
@@ -1,8 +1,8 @@
 <div class="stripe"></div>
-<Banner />
+<Banner sectionId="home" />
 <AboutBlurb />
-<ClubLeaders />
-<GetInvolved />
+<ClubLeaders sectionId="club-leaders" />
+<GetInvolved sectionId="getting-involved" />
 
 <style>
   .stripe {
