--- a/src/sections/GetInvolved.html
+++ b/src/sections/GetInvolved.html
@@ -1,5 +1,5 @@
-<section class="backing">
-  <section>
+<section id="{sectionId}">
+  <div class="backing">
     <header>Get Involved</header>
     <p>We're always open to new members stopping by! Generally, we have</p>
     <ul>
@@ -14,26 +14,29 @@
     </ul>
     <div class="calendar-container">
       <iframe
+        title="Event Calendar"
         src="https://teamup.com/kstmf67ugzsq6jd4q2?showHeader=0&view=m&disableSidepanel=1"
         frameborder="0"
-        width="100%"
         height="100%"
+        width="100%"
       ></iframe>
     </div>
-  </section>
+  </div>
 </section>
 
 <style>
   section {
-    padding: 3rem;
+    margin-top: -5rem;
   }
   .backing {
     background: var(--primary-bg-1);
+    padding: 3vw;
     background-size: 6rem, auto;
-    margin-top: -5rem;
     padding-top: 10rem;
+    margin-top: -10rem;
     padding-bottom: 10rem;
     max-width: 100%;
+    border-radius: 2rem;
   }
 
   ul {
@@ -41,7 +44,7 @@
   }
 
   li {
-    margin-bottom: 2rem;
+    margin: 1rem 0;
   }
 
   .emphasis {
@@ -56,7 +59,8 @@
   .calendar-container {
     width: 100%;
     height: 40rem;
-    margin-top: 6rem;
+    max-height: 70vh;
+    margin-top: 4rem;
     overflow: hidden;
     border-radius: 0.5rem;
     opacity: 0.99;
@@ -65,4 +69,6 @@
 
 <script>
   import CalendarEmbed from './CalendarEmbed.html'
+
+  export let sectionId
 </script>
