--- a/src/sections/Content.html
+++ b/src/sections/Content.html
@@ -20,6 +20,7 @@
     transform-origin: top right;
     height: 400vh;
     width: 100%;
+    min-width: 40rem;
     background: var(--primary-bg-1);
     background-size: 100%;
     z-index: -1;
