--- a/src/sections/Banner.html
+++ b/src/sections/Banner.html
@@ -65,14 +65,14 @@
     }
   }
 
-  @media(max-width: var(--mobile-width)) {
+  @media(max-width: 45rem) {
     .container {
       justify-content: center;
     }
     .card-container {
       position: absolute;
       margin-left: -2rem;
-      --darkness: hsla(227, 40%, 12%, 0.8);
+      --darkness: var(--dark-overlay);
     }
   }
   :global(.ready-for-anim) h1 {
