tone down blue saturations across the site

--- a/src/sections/Banner.html
+++ b/src/sections/Banner.html
@@ -13,6 +13,7 @@
   
 <style>
   .container {
+    position: relative;
     width: 100%;
     max-width: 60rem;
     height: 35rem;
@@ -70,6 +71,7 @@
     }
     .container {
       justify-content: center;
+      padding-top: 8rem;
     }
     .card-container {
       position: absolute;
