animated team panel started

--- a/src/sections/Content.html
+++ b/src/sections/Content.html
@@ -1,6 +1,7 @@
 <div class="stripe"></div>
 <Banner sectionId="home" />
 <AboutBlurb />
+<Teams />
 <ClubLeaders sectionId="club-leaders" />
 <GetInvolved sectionId="getting-involved" />
 
@@ -30,6 +31,7 @@
 <script>
   import Banner from './Banner.html'
   import AboutBlurb from './AboutBlurb.html'
+  import Teams from './Teams.html'
   import ClubLeaders from './ClubLeaders.html'
   import GetInvolved from './GetInvolved.html'
 </script>
