fix getting involved, add footer, add marketing team

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <div class="backing">
     <Content />
   </div>
+  <Footer />
 </main>
 
 <style>
@@ -30,6 +31,7 @@
 </style>
 
 <script>
-  import Content from './sections/Content.html'
   import NavBar from './components/NavBar.html'
+  import Content from './sections/Content.html'
+  import Footer from './sections/Footer.html'
 </script>
