--- a/src/sections/Teams.html
+++ b/src/sections/Teams.html
@@ -9,7 +9,7 @@
     <svelte:component this="{curr.component}" />
   </div>
   <div class="buttons">
-    <button class="back"></button>
+    <button class="back" on:click="{onBack}"></button>
     <button class="forward" on:click="{onForward}"></button>
   </div>
 </section>
@@ -105,7 +105,7 @@
 </style>
 
 <script>
-  import { Design, Production } from './teamSections'
+  import { Design, Production, Marketing } from './teamSections'
   import IconSwitcher from '../components/IconSwitcher.html'
 
   const sections = [
@@ -119,11 +119,25 @@
       component: Production,
       icon: 'rook.svg',
     },
+    {
+      label: 'Mrkting',
+      component: Marketing,
+      icon: 'bishop.svg',
+    }
   ]
 
   const onForward = () => {
-    animate = true
     currIndex = (currIndex + 1) % sections.length
+    startAnimation()
+  }
+
+  const onBack = () => {
+    currIndex = currIndex === 0 ? sections.length - 1 : currIndex - 1
+    startAnimation()
+  }
+
+  const startAnimation = () => {
+    animate = true
     setTimeout(() => {
       curr = sections[currIndex]
       setTimeout(() => {
