--- a/src/sections/GetInvolved.html
+++ b/src/sections/GetInvolved.html
@@ -29,8 +29,8 @@
     color: inherit;
   }
   section {
-    background: #2a3046;
-    /* background-size: 7rem auto; */
+    background: url('/icons/diamond-pattern-light.svg'), #2a3046;
+    background-size: 7rem auto;
     padding: 3rem 3vw;
     width: 100%;
     border-radius: 1rem;
