adjust nav transitions, add teams section to nav

--- a/src/sections/Content.html
+++ b/src/sections/Content.html
@@ -1,7 +1,7 @@
 <div class="stripe"></div>
 <Banner sectionId="home" />
 <AboutBlurb />
-<Teams />
+<Teams sectionId="teams" />
 <ClubLeaders sectionId="club-leaders" />
 <GetInvolved sectionId="getting-involved" />
 
