continue working on timeline section

--- a/src/sections/Content.html
+++ b/src/sections/Content.html
@@ -1,5 +1,6 @@
 <div class="stripe"></div>
 <Banner sectionId="home" />
+<Timeline sectionId="timeline" />
 <AboutBlurb />
 <Teams sectionId="teams" />
 <ClubLeaders sectionId="club-leaders" />
@@ -31,6 +32,7 @@
 <script>
   import Banner from './Banner.html'
   import AboutBlurb from './AboutBlurb.html'
+  import Timeline from './Timeline.html'
   import Teams from './Teams.html'
   import ClubLeaders from './ClubLeaders.html'
   import GetInvolved from './GetInvolved.html'
