--- a/src/sections/GetInvolved.html
+++ b/src/sections/GetInvolved.html
@@ -61,7 +61,7 @@
 </style>
 
 <script>
-  import CalendarEmbed from './CalendarEmbed.html'
+  import CalendarEmbed from '../components/CalendarEmbed.html'
 
   export let sectionId
 </script>
