--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="build/bundle.css" />
   </head>
 
-  <body style="overflow: hidden">
+  <body>
     <script src="build/bundle.js"></script>
   </body>
 </html>
