--- a/src/sections/Content.html
+++ b/src/sections/Content.html
@@ -16,12 +16,12 @@
   .stripe:before {
     content: "";
     position: absolute;
-    right: -40rem;
+    right: -30rem;
     top: 0;
-    transform: rotate(20deg) translateZ(-2rem) translateY(-50%) scale(1.7);
+    transform: rotate(20deg);
     transform-origin: top right;
-    height: calc(280rem - 20vw);
-    width: 100%;
+    height: 300rem;
+    width: 120%;
     min-width: 40rem;
     background: var(--primary-bg-1);
     background-size: 100%;
