--- a/src/sections/Banner.html
+++ b/src/sections/Banner.html
@@ -1,16 +1,18 @@
 <div class="container" id="{sectionId}">
   <div class="card-container">
-    <BannerCard angle="-10deg"/>
-    <BannerCard angle="5deg" />
-    <BannerCard angle="20deg" />
+    {#each cards as angle}
+    <div class="card" style="--angle: {angle}">
+      <PlayingCard />
+    </div>
+    {/each}
   </div>
   <header>
     <h1 style="--offset: -5rem">Golden</h1>
-    <h1 class="accented" >Swarm</h1>
+    <h1 class="accented">Swarm</h1>
     <h1 style="--offset: 5rem">Games</h1>
   </header>
 </div>
-  
+
 <style>
   .container {
     position: relative;
@@ -33,6 +35,14 @@
     margin-left: -5rem;
     padding: 2rem;
   }
+  .card {
+    position: absolute;
+    transform-origin: 25% 100%;
+    transition: transform 0.5s;
+  }
+  :global(.ready-for-anim) .card {
+    transform: rotate(var(--angle));
+  }
   header {
     position: relative;
     display: flex;
@@ -41,7 +51,8 @@
     width: 60vw;
     text-align: right;
   }
-  header::before, header::after {
+  header::before,
+  header::after {
     display: none;
   }
   h1 {
@@ -59,13 +70,13 @@
     }
   }
 
-  @media(max-width: 60rem) {
+  @media (max-width: 60rem) {
     h1 {
       font-size: 5rem;
     }
   }
 
-  @media(max-width: 45rem) {
+  @media (max-width: 45rem) {
     h1 {
       font-size: 4rem;
     }
@@ -86,8 +97,9 @@
 </style>
 
 <script>
-  import BannerCard from '../components/BannerCard.html'
-  
+  import PlayingCard from '../components/PlayingCard.html'
+
+  const cards = ['-10deg', '5deg', '20deg']
+
   export let sectionId
 </script>
-  
