--- a/src/sections/Banner.html
+++ b/src/sections/Banner.html
@@ -41,7 +41,7 @@
     transition: transform 0.5s;
   }
   :global(.ready-for-anim) .card {
-    transform: rotate(var(--angle));
+    animation: display-cards 0.8s ease-in forwards;
   }
   header {
     position: relative;
@@ -65,8 +65,29 @@
   }
 
   @keyframes slide-header {
-    to {
+    0% {
+      margin-right: 0;
+    }
+    40% {
+      margin-right: calc(var(--offset) * 1.3);
+    }
+    100% {
       margin-right: var(--offset);
+    }
+  }
+
+  @keyframes display-cards {
+    0% {
+      transform: rotate(0);
+    }
+    50% {
+      transform: rotate(-30deg);
+    }
+    80% {
+      transform: rotate(calc(var(--angle) * 1.3));
+    }
+    100% {
+      transform: rotate(var(--angle));
     }
   }
 
@@ -86,13 +107,13 @@
     }
     .card-container {
       position: absolute;
-      margin-left: -3rem;
-      margin-top: -1.5rem;
+      margin: -3rem;
       --darkness: var(--dark-overlay);
     }
   }
   :global(.ready-for-anim) h1 {
-    animation: slide-header 0.5s forwards;
+    animation: slide-header 0.4s ease-out forwards;
+    animation-delay: 0.6s;
   }
 </style>
 
