--- a/src/sections/Timeline.html
+++ b/src/sections/Timeline.html
@@ -56,6 +56,7 @@
     font-size: 1.5rem;
     margin: 0.5rem;
     margin-left: -1rem;
+    text-align: left;
   }
   .text > li {
     text-indent: -1.3rem;
