adjust layout spacing

--- a/src/sections/AboutBlurb.html
+++ b/src/sections/AboutBlurb.html
@@ -1,5 +1,5 @@
 <section>
-  <header>About Us</header>
+  <header>A Brief History</header>
   <p>
     We're a new club at <a href="https://gatech.edu">Georgia Tech</a> all about
     making our own board games! We're currently building our first ever game
@@ -11,7 +11,7 @@
 
 <style>
   section {
-    padding-top: 0;
+    padding-bottom: 3rem;
   }
   p {
     color: var(--grey-9);
