--- a/src/sections/Banner.html
+++ b/src/sections/Banner.html
@@ -21,6 +21,7 @@
     height: 35rem;
     display: flex;
     padding: 3rem;
+    padding-top: 10rem;
     margin: auto;
     justify-content: space-between;
     align-items: center;
@@ -32,6 +33,7 @@
     width: 35rem;
     max-width: 100%;
     height: 27rem;
+    margin-top: -5rem;
     margin-left: -5rem;
     padding: 2rem;
   }
