--- a/src/sections/Footer.html
+++ b/src/sections/Footer.html
@@ -1,12 +1,71 @@
-<footer>I'm a footer!</footer>
+<footer>
+  <div class="container">
+    <p>
+      <strong>Email </strong>
+      <a href="mailto:noone">gsg@whatisit.com</a>
+    </p>
+    <p>
+      <strong>GroupMe </strong
+      ><a href="https://bit.ly/2TamyCt">https://bit.ly/2TamyCt</a>
+    </p>
+    <p><strong>Slack </strong>goldenswarmgames.slack.com</p>
+    <p class="backing-text">Contact us</p>
+  </div>
+  <p class="how-it-was-made">
+    This website was made with love using SvelteJS and some painstaking CSS.
+    <a href="https://github.com/Holben888/gsg-site">Visit the repo</a> to see
+    how it works and fix what's broken 😄
+  </p>
+</footer>
 
 <style>
+  p,
+  header,
+  header:before,
+  header:after {
+    color: white;
+  }
   footer {
     background: var(--primary-bg-1);
     margin-top: -10rem;
     padding-top: 15rem;
     color: white;
-    height: 60rem;
     border-radius: 1rem 1rem 0 0;
+    margin-bottom: -1rem;
+  }
+  .container {
+    width: 100%;
+    position: relative;
+    padding: 2rem;
+  }
+  .how-it-was-made {
+    width: 100%;
+    background: var(--primary-bg-2);
+    color: var(--primary-grey-9);
+    padding: 1rem;
+    font-size: 1rem;
+  }
+  p {
+    color: var(--grey-8);
+  }
+  strong {
+    color: var(--grey-9);
+    font-family: p22-underground;
+  }
+  p:not(.how-it-was-made) > a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  .backing-text {
+    position: absolute;
+    font-weight: 800;
+    font-family: p22-underground-sc;
+    font-size: 12rem;
+    margin: 0;
+    bottom: 6rem;
+    right: 2rem;
+    opacity: 0.1;
+    pointer-events: none;
   }
 </style>
