--- a/src/sections/Footer.html
+++ b/src/sections/Footer.html
@@ -1,8 +1,11 @@
 <footer>
   <div class="container">
+    <header>Contact Us</header>
     <p>
       <strong>Email </strong>
-      <a href="mailto:noone">gsg@whatisit.com</a>
+      <a href="mailto:goldenswarmgames@lists.gatech.edu">
+        goldenswarmgames@lists<wbr />.gatech.edu
+      </a>
     </p>
     <p>
       <strong>GroupMe </strong
@@ -31,22 +34,27 @@
     padding-top: 15rem;
     color: white;
     border-radius: 1rem 1rem 0 0;
-    margin-bottom: -1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .container {
     width: 100%;
     position: relative;
     padding: 2rem;
+    max-width: 60rem;
   }
   .how-it-was-made {
     width: 100%;
     background: var(--primary-bg-2);
     color: var(--primary-grey-9);
-    padding: 1rem;
+    padding: 2rem;
     font-size: 1rem;
+    white-space: initial;
   }
   p {
     color: var(--grey-8);
+    white-space: nowrap;
   }
   strong {
     color: var(--grey-9);
@@ -61,11 +69,17 @@
     position: absolute;
     font-weight: 800;
     font-family: p22-underground-sc;
-    font-size: 12rem;
+    font-size: 10rem;
     margin: 0;
     bottom: 6rem;
     right: 2rem;
-    opacity: 0.1;
+    opacity: 0.08;
     pointer-events: none;
+  }
+
+  @media (max-width: 45rem) {
+    .backing-text {
+      display: none;
+    }
   }
 </style>
