fix Rishovs name

--- a/src/sections/ClubLeaders.html
+++ b/src/sections/ClubLeaders.html
@@ -118,7 +118,7 @@
       type: 'Exec',
     },
     {
-      name: 'Bishov Sarkar',
+      name: 'Rishov Sarkar',
       description: 'Treasurer that handles those clams',
       image: '/images/Rishov-profile.jpg',
       type: 'Exec',
