fix club leader names

--- a/src/sections/ClubLeaders.html
+++ b/src/sections/ClubLeaders.html
@@ -138,7 +138,7 @@
       type: 'Lead',
     },
     {
-      name: 'Rocio',
+      name: 'Rocio Soto',
       description: 'Lone wolf queen of marketing',
       image: '/images/Rocio-profile.jpg',
       type: 'Lead',
