fix semantic markup for headers

--- a/src/sections/AboutBlurb.html
+++ b/src/sections/AboutBlurb.html
@@ -1,5 +1,5 @@
 <section>
-  <header>A Brief History</header>
+  <h1>A Brief History</h1>
   <p>
     We're a new club at <a href="https://gatech.edu">Georgia Tech</a> all about
     making our own board games! We're currently building our first ever game
