--- a/src/sections/Footer.html
+++ b/src/sections/Footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="container">
-    <header>Contact Us</header>
+    <h1>Contact Us</h1>
     <p>
       <strong>Email </strong>
       <a href="mailto:goldenswarmgames@lists.gatech.edu">
