--- a/src/sections/GetInvolved.html
+++ b/src/sections/GetInvolved.html
@@ -1,5 +1,5 @@
 <section id="{sectionId}">
-  <header>Get Involved</header>
+  <h1>Get Involved</h1>
   <p>We're always open to new members stopping by! Generally, we have</p>
   <ul>
     <li>
