--- a/src/sections/ClubLeaders.html
+++ b/src/sections/ClubLeaders.html
@@ -1,5 +1,5 @@
 <section id="{sectionId}">
-  <header>Our leaders</header>
+  <h1>Our leaders</h1>
   {#each leaders as leader}
   <PlayingCard size="large" doubleSided="{true}">
     <div class="accent"></div>
@@ -9,7 +9,7 @@
         <img src="{leader.image}" alt="{leader.name} profile picture" />
       </div>
     </div>
-    <h1>{leader.name}</h1>
+    <h2>{leader.name}</h2>
     <p class="description">{leader.description}</p>
   </PlayingCard>
   {/each}
