--- a/src/sections/Teams.html
+++ b/src/sections/Teams.html
@@ -3,7 +3,7 @@
   style="--anim-length: {wipeAnimLength}"
   id="{sectionId}"
 >
-  <header>Teams</header>
+  <h1>Teams</h1>
   <p class="backing-text">{curr.label}</p>
   <IconSwitcher animate="{animate}" animLength="{wipeAnimLength}" icons="{sections.map(section => section.icon)}" index="{currIndex}" />
   <div class="text-container">
@@ -16,9 +16,9 @@
 </section>
 
 <style>
-  header,
-  header:before,
-  header:after {
+  h1,
+  h1:before,
+  h1:after {
     color: var(--primary-bg-1);
     grid-area: header;
     z-index: 1;
