update profile pictures

--- a/src/sections/ClubLeaders.html
+++ b/src/sections/ClubLeaders.html
@@ -146,12 +146,12 @@
     {
       name: 'Vishal Shah',
       description: 'Grand conductor of production',
-      image: '',
+      image: '/images/Vishal-profile.jpg',
       type: 'Lead',
     },
     {
       name: 'Ben Holmes',
-      description: 'Whimsical website developer ✨',
+      description: 'All-knowing web sorceror 🔮',
       image: '/images/BenH-profile.jpg',
       type: 'Lead',
     },
