fix typo in timeline info

--- a/src/sections/Timeline.html
+++ b/src/sections/Timeline.html
@@ -141,7 +141,7 @@
     {
       timeframe: 'Fall 2017',
       info: [
-        'Humbly began in ENG 1102 with the topic “The Art of Game Design',
+        'Humbly began in ENG 1102 with the topic "The Art of Game Design"',
         'Escape to Elysium’s first major iteration completed',
       ],
     },
