fix typo on production copy

--- a/src/sections/teamSections/Production.html
+++ b/src/sections/teamSections/Production.html
@@ -7,6 +7,6 @@
   curious about how to take an idea to a shiny new product.
 </p>
 <p>
-  This is one of our under-servered teams so anyone interested will get a warm
+  This is one of our under-served teams so anyone interested will get a warm
   welcome!
 </p>
